maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:22: error: value Nord is not a member of object plm.universe.Direction
  setDirection(Direction.Nord)
                         ^